src/test/deca/context/valid/methodCall-sameParamField.deca
class A {
    int x;
    float y;

    int isBg(int x, int y) {
        return x;
    }
}

{
    A a = new A();
    println(a.isBg(3, 4));
}