src/test/deca/context/invalid/declParam-doubledef.deca
class A {
    int method(int x, float x){
        return 3;
    }
}